--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pdfjs-dist": "^4.9.124",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.13.1",
     "react-pdf": "^9.1.1",
